Various minor visual fixes
* link points ticker to leaderboard
* reduce whitespace above dashboard
* put widget layout editing controls on same line
* round corners on challenge map
* adjust task-completion comment input color and margin
* adjust label on task-completion other-statuses button
* add whitespace between challenge results scrollbar and map
* adjust home page hero styling
* adjust home page featured challenges color

--- a/src/components/WidgetGrid/WidgetGrid.scss
+++ b/src/components/WidgetGrid/WidgetGrid.scss
@@ -6,6 +6,7 @@
     justify-content: flex-end;
     align-items: center;
     padding-top: 10px;
+    margin-right: 2rem;
 
     .dashboard__filter {
       margin-right: 15px;
